--- a/composer.json
+++ b/composer.json
@@ -53,10 +53,18 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\"  --names=server,queue,logs,vite"
         ],
+        "pest:test": "pest --parallel --compact",
         "test": [
             "@php artisan config:clear --ansi",
-            "@php artisan test"
-        ]
+            "@php artisan test",
+            "@lint:test",
+            "@rector:test",
+            "@pest:test"
+        ],
+        "lint": "pint",
+        "rector": "rector",
+        "lint:test": "pint --test",
+        "rector:test": "rector --dry-run"
     },
     "extra": {
         "laravel": {
